# Multi-Robot-Exploration-and-Patrolling

./: README.md  map.pgm  map.yaml  post_exploration_tasks.sh  ros_node.py  run.sh
src/: robot1_depth_matrix (1).csv
src/create3_sim/irobot_create_common/irobot_create_common_bringup/launch/: create3_nodes.launch.py
src/create3_sim/irobot_create_common/irobot_create_control/config/: control.yaml
src/create3_sim/irobot_create_common/irobot_create_control/launch/include/: control.py
src/create3_sim/irobot_create_common/irobot_create_description/urdf/: create3.urdf.xacro
src/cslam_experiments/config/: realsense_rgbd.yaml
src/cslam_experiments/launch/odometry/: rgbdslam.launch.py  rtabmap_rgbd_odometry.launch.py
src/cslam_experiments/launch/robot_experiments/: experiment_oak-d_rgbd.launch.py  multi_robot_spawn.launch.py
src/cslam_experiments/launch/sensors/: oak-d.launch.py
src/m-explore-ros2/explore/launch/: explore_launch.py
src/m-explore-ros2/map_merge/config/: params.yaml
src/m-explore-ros2/map_merge/launch/: from_map_server.launch.py  rviz_one_robot.launch.py
src/m-explore-ros2/map_merge/launch/tb3_model/: waffle.model
src/m-explore-ros2/map_merge/launch/tb3_simulation/: multi_tb3_simulation_launch.py  new_multibot.launch.py
src/m-explore-ros2/map_merge/launch/tb3_simulation/config/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_3.yaml  nav2_multirobot_params_4.yaml  nav2_multirobot_params_5.yaml  nav2_multirobot_params_6.yaml  nav2_multirobot_params_7.yaml  nav2_multirobot_params_8.yaml  robot_poses.yaml
src/m-explore-ros2/map_merge/launch/tb3_simulation/worlds/: walk.world  walk_object.world  world.world
src/m-explore-ros2/map_merge/src/: map_merge.cpp
src/map_merge/launch/: map_merge.launch.py
src/my_python_package/: package.xml  setup.py
src/my_python_package/launch/: my_python_package_launch.py
src/my_rtabmap_nav2/: package.xml  setup.cfg  setup.py
src/my_rtabmap_nav2/launch/: rtabmap_nav2_costmap_launch.py
src/patroling/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/patroling/config/: map.graph  objects.yaml
src/patroling/launch/: Untitled.txt  nearest_launch.py  patrol_launch.py
src/patroling/patroling/: #first run these command to spawn bots a  goal_assigner_node (1).py  goal_assigner_node.py  nearest_robot_node.py  nearest_robot_search.py  patrol_graph.py  points_to_monitor.py  robot_manager.py  robot_manager1.py  send_robot_to_object.py  utils.py  voronoi_graph.py
src/patrolling_interfaces/: CMakeLists.txt  package.xml
src/patrolling_interfaces/srv/: SendRobotToObject.srv
src/scripts_package/: package.xml  setup.cfg  setup.py
src/scripts_package/launch/: camera_subscriber.launch.py
src/scripts_package/scripts_package/: camera_listener.py
src/test-app/: .gitignore  README.md  requirements.txt
src/test-app/src/object-search/: app.py  db_client.py  llm.py  results.json  utils.py  vision.py  vlm.py  vlm_results.json
src/test-app/src/utils/: db_server.py  fix_chromadb_bug.py
src/turtlebot4/turtlebot4_description/launch/: robot_description.launch.py
src/turtlebot4/turtlebot4_description/urdf/standard/: turtlebot4.urdf.xacro
src/turtlebot4_simulator/turtlebot4_ignition_bringup/gui/standard/: gui.config
src/turtlebot4_simulator/turtlebot4_ignition_bringup/launch/: ignition.launch.py  multi_turtlebot4_spawn.launch.py  ros_ign_bridge.launch.py  turtlebot4_controller.launch.py  turtlebot4_ignition.launch.py  turtlebot4_spawn.launch.py
src/turtlebot4_simulator/turtlebot4_ignition_bringup/worlds/: warehouse.sdf
src/world_setup/worlds/: hospital_world.world  ofice.world
