<package format="3">
  <name>patroling</name>
  <version>0.0.1</version>
  <description>Your package description</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>action_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>patrolling_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
