<?xml version="1.0"?>
<package format="3">
  <name>patrolling_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for the patrolling package</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Remove this line -->
  <!-- <depend>rosidl_default_generators</depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
